--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@
 
 # OS generated files #
 ######################
+*~
+*.tmp
+.directory
 .DS_Store
 .DS_Store?
 ._*
@@ -39,3 +42,7 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Transitory files #
+####################
+.vagrant/
